--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,9 @@
   </span>
 
   <ul class="gallery">
-
   </ul>
+
+  <button type="button" class="btn_load position is-hidden">Load more</button>
 
 </body>
 
